# atlas-payload-provider

./: .gitignore  Cargo.toml  Dockerfile  README.md  SIMPLE_API_EXPLANATION.md  docker-compose.yml  instructions.md
.github/workflows/: package.yml
clients/js/: .gitignore  README.md  package.json  tsconfig.json
clients/js/examples/: submit-and-verify.ts  verify.ts
clients/js/src/: client.ts  index.ts  receipt.ts  types.ts  verify.ts
scripts/: package.sh
src/: arkiv.rs  config.rs  index.html  main.rs  model.rs  server.rs  signer.rs  store.rs  validation.rs
