[package]
name = "atlas-payload-provider"
version = "0.1.2"
edition = "2024"
description = "Payload availability service for the Atlas Network."
repository = "https://github.com/atlas-chain/atlas-payload-provider"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }
base64 = "0.22"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.31", features = ["recovery"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
